<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:elevation="0dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    >

    <LinearLayout
        android:id="@+id/wholeCardLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <ImageView

            android:src="@color/colorPrimary"
            android:id="@+id/imageview"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/dayTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/placeholderDay"
            android:textSize="15sp"
             />

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/goalTxt"
                android:textSize="22sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/placeholderGoalRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <TextView
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp"
                android:id="@+id/descTxt"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/placeholderDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>