<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".initialization.GetName">

    <data>
        <variable
            name="GetInitialDetailsViewModel"
            type="com.example.android.productivity.viewmodels.GetNameViewModel" />
    </data>

    <RelativeLayout
        android:background="#F5FCFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/sunsetStart"
            android:layout_width="match_parent"
            android:layout_height="296dp"
            android:scaleType="centerCrop"
            android:src="@drawable/moving_forward_blue" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp" />


            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/letsGetStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/getstarted"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp"
                android:textStyle="bold" />


            <EditText
                android:maxHeight="50dp"
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/whatDoWeCallYou"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textAlignment="center"
                android:textSize="18sp" />


            <Button
                android:id="@+id/get_initial_info_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:textSize="15dp"
                android:background="@drawable/my_blue_btn"
                android:padding="15dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/next"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</layout>