<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".productivitytracker.AddGoal">

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/relativeLayoutForShowDoneLayout"
        android:layout_width = "match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height = "match_parent"
        >

        <ImageView
            android:id="@+id/firstItemImg"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:id="@+id/goalMadeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstItemImg"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/goalSaved"
            android:textSize="20sp" />

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/goalMadeTxt"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:background="@drawable/my_orange_button"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/toTracking"
            android:textColor="@color/white_text_color"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:src="@drawable/edit_entryy"
        android:layout_gravity="center_horizontal"
        android:id="@+id/topImg"
        android:layout_width="250dp"
        android:layout_height="250dp"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:visibility="visible"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/createOrUpdateGoalText"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ratingLinearLayout"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_margin="16dp"
                android:src="@drawable/happy_not_selected"
                android:id="@+id/happyIcon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />


            <ImageView
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="16dp"
                android:src="@drawable/meh_not_selected"
                android:layout_weight="1"
                android:id="@+id/mehIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="16dp"
                android:src="@drawable/sad_not_selected"
                android:layout_weight="1"
                android:id="@+id/sadIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <EditText
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:maxHeight="100dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:id="@+id/goalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:maxHeight="100dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/Descreption"
            android:layout_margin="16dp"
            android:gravity="center"
            android:id="@+id/descEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:id="@+id/testButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@android:drawable/ic_input_add"
        android:clickable="true"
        android:focusable="true"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="16dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

    </layout>
